Refactor StdNumberTypechecker